fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -407,12 +407,6 @@ img{
 	position: relative;
 	overflow: hidden;
 }
-.hidden-text{
-	padding: 40px 32px 0;
-
-	line-height: 1.5;
-	color: var(--light);
-}
 .thumb-overlay{
 	position: absolute;
 	top:0;
@@ -420,7 +414,11 @@ img{
 	width: 100%;
 	height: 100%;
 
+	padding: 40px 32px;
+
 	background-color: var(--primary-brand);
+	line-height: 1.5;
+	color: var(--light);
 
 	transform: translateY(100%);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
